--- a/crud/public/css/style.css
+++ b/crud/public/css/style.css
@@ -1,5 +1,9 @@
 *{
-    transition: all 0.4s ease;
+    transition: background-color 0.4s ease;
+}
+
+main{
+    margin-top: 55.05px;
 }
 
 .add{
@@ -22,11 +26,16 @@
     position: fixed;
     text-align: center;
     box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%) !important;
+    z-index: 1;
 }
 
 .sidebar .title{
     font-weight: bolder;
     font-size: 1.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid #ccc;
+    border-top: 1px solid #ccc;
 }
 
 .sidebar hr{
